objects/Carpool__c.object
<CustomObject><fields>
        <fullName>End_Address__c</fullName>
        <label>End Address</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Start_Address__c</fullName>
        <label>Start Address</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Carpool</label><nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Carpool ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Carpool</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>